<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<PreferenceCategory
        android:enabled="false"
        android:title="DÉFINITION DU PARAMÉTRAGE DE LA LICENSE D'UTILISATION DE DONNÉES CONCLUE LORSQUE VOUS ACCEPTEZ UNE OFFRE."/>-->

    <EditTextPreference
        android:enabled="false"
        android:singleLineTitle="false"
        android:title="DÉFINITION DU PARAMÉTRAGE DE LA LICENSE D'UTILISATION DE DONNÉES CONCLUE LORSQUE VOUS ACCEPTEZ UNE OFFRE." />

    <!--
        <com.zeprofile.application.base.CustomPreferenceCategory
            android:key="user_visibility_category_location"
            android:title="Localisation">
            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_preference_localization_continuous"
                android:title="@string/text_localization_continuous"/>
            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_preference_localization_address"
                android:title="@string/text_localization_address" />
        </com.zeprofile.application.base.CustomPreferenceCategory>
    -->

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/list_titles_localization_license_setting"
        android:entryValues="@array/list_values_localization_license_setting"
        android:key="@string/key_localization_license_setting"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/title_localization_license_setting" />

    <!--<com.zeprofile.application.base.CustomPreferenceCategory-->
    <!--android:key="user_visibility_category_duration"-->
    <!--android:title="Durée">-->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/list_titles_duration_license_setting"
        android:entryValues="@array/list_values_duration_license_setting"
        android:key="@string/key_duration_license_setting"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/title_duration_license_setting" />
    <!--</com.zeprofile.application.base.CustomPreferenceCategory>-->

    <!--<com.zeprofile.application.base.CustomPreferenceCategory-->
    <!--android:key="user_visibility_category_recipient"-->
    <!--android:title="Destinataire">-->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/list_titles_destination_license_setting"
        android:entryValues="@array/list_values_destination_license_setting"
        android:key="@string/key_destination_license_setting"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/title_destination_license_setting" />
    <!--</com.zeprofile.application.base.CustomPreferenceCategory>-->

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/list_titles_content_marketing_license_setting"
        android:entryValues="@array/list_values_content_marketing_license_setting"
        android:key="@string/key_content_marketing_license_setting"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/title_content_marketing_license_setting" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/list_titles_frequency_marketing_license_setting"
        android:entryValues="@array/list_values_frequency_marketing_license_setting"
        android:key="@string/key_frequency_marketing_license_setting"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/title_frequency_marketing_license_setting" />

    <!--TODO 目前只能实现数字的滚动式选择器-->
    <!--<com.zeprofile.application.base.CustomPreferenceCategory-->
        <!--android:key="user_setting_category_test"-->
        <!--android:title="Test_Wheel_Picker">-->
        <!--<com.zeprofile.application.base.NumberPickerPreference-->
            <!--android:defaultValue="1"-->
            <!--android:key="key_number"-->
            <!--android:title="Number Picker" />-->
    <!--</com.zeprofile.application.base.CustomPreferenceCategory>-->

</PreferenceScreen>