<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Hang on 18-4-12 下午3:19
  ~ Copyright (c) 2018 . All rights reserved.
  ~ Last modified 18-4-12 下午12:37
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ResetPassword">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ResetPassword">

        <TextView
            android:id="@+id/textEnterTheCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/text_enter_the_code"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/codeTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/codeTextField"
            android:layout_width="230dp"
            android:layout_height="38dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_textfield"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_codeTextField"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/resendCodeBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEnterTheCode" />

        <Button
            android:id="@+id/resendCodeBtn"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/bg_transparent_button"
            android:text="@string/text_resendCodeBtn"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/zeprofileOrange"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textSetNewPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/codeTextField" />

        <TextView
            android:id="@+id/textSetNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/text_textSetNewPassword"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/newPasswordTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resendCodeBtn" />

        <EditText
            android:id="@+id/newPasswordTextField"
            android:layout_width="230dp"
            android:layout_height="38dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_textfield"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_newPasswordTextField"
            android:inputType="textPassword"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/confirmPasswordTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSetNewPassword" />

        <EditText
            android:id="@+id/confirmPasswordTextField"
            android:layout_width="230dp"
            android:layout_height="38dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_textfield"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_confirmPasswordTextField"
            android:inputType="textPassword"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/resetPasswordBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordTextField" />

        <Button
            android:id="@+id/resetPasswordBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_button"
            android:text="@string/text_resetPasswordBtn"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextField" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>