<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Hang on 18-4-12 下午3:19
  ~ Copyright (c) 2018 . All rights reserved.
  ~ Last modified 18-4-11 下午5:28
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".SignUp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/appLogoSignUpView"
            android:layout_width="230dp"
            android:layout_height="75dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/text_app_logo_description"
            app:layout_constraintBottom_toTopOf="@+id/lastNameTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/zeprofilelogorgb" />

        <EditText
            android:id="@+id/lastNameTextField"
            android:layout_width="230dp"
            android:layout_height="38dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_textfield"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_lastNameTextField"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/firstNameTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appLogoSignUpView"
            app:layout_constraintVertical_bias="0.366" />

        <EditText
            android:id="@+id/firstNameTextField"
            android:layout_width="230dp"
            android:layout_height="38dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_textfield"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_firstNameTextField"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/emailTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameTextField"
            app:layout_constraintVertical_bias="0.463" />

        <EditText
            android:id="@+id/emailTextField"
            android:layout_width="230dp"
            android:layout_height="38dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_textfield"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_emailTextField"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/passwordTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameTextField"
            app:layout_constraintVertical_bias="0.56" />

        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="230dp"
            android:layout_height="38dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_textfield"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_passwordTextField"
            android:inputType="textPassword"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextField"
            app:layout_constraintVertical_bias="0.648" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_rounded_button"
            android:layout_marginStart="8dp"
            android:text="@string/text_signUpBtn"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/loginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField"
            app:layout_constraintVertical_bias="0.752" />

        <Button
            android:id="@+id/loginBtn"
            android:background="@drawable/bg_transparent_button"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/text_loginBtn"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/zeprofileOrange"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpBtn"
            app:layout_constraintVertical_bias="0.836" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
